syntax = "proto2";

message odemcdJob {
  required int32 job_type = 1;
  required int32 device_id =  2;
  repeated map<string,string> values = 3;
}
